--- a/front_server/src/pages/views/adminCd.css
+++ b/front_server/src/pages/views/adminCd.css
@@ -5,8 +5,6 @@
     font-family: Arial, sans-serif;
 }
 
-
-
 .logo {
     max-width: 150px; 
     height: auto;
@@ -38,7 +36,8 @@ header {
     text-align: center;
     background-color: #ffffff;
     padding: 20px;
-    
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo-container {
