--- a/front_server/src/pages/views/consultar_pedidos.css
+++ b/front_server/src/pages/views/consultar_pedidos.css
@@ -38,10 +38,12 @@ body {
 
 .container {
     width: 100%;
+    max-width: 850px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 100px;
+    margin: 0 auto;
 }
 
 .menu-container {
