--- a/front_server/src/pages/views/pesquisar_usuarios.css
+++ b/front_server/src/pages/views/pesquisar_usuarios.css
@@ -12,10 +12,11 @@
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     width: 250%;
-    max-width: 800px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 header {
